add header / nav

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -3,3 +3,6 @@
 @use 'base/mixins' as *;
 @use 'base/typography' as *;
 
+@use 'block/header' as *;
+@use 'block/nav' as *;
+@use 'block/search' as *;
