--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,14 +1,18 @@
 :root {
-  --container-width: 1200px;
+  --container-width: 1250px;
   --container-padding: 20px;
 }
 
 .container {
-  max-width: calc(var(--container-width) + var(--container-padding)*2);
+  max-width: calc(var(--container-width) + var(--container-padding) * 2);
   margin-inline: auto;
   padding-inline: var(--container-padding);
 }
 
 .hidden {
   display: none !important;
+}
+
+.body {
+  background: #f9f9f9;
 }
